Fix new errors and empty file problem.

--- a/test/fixtures/warnings/src/warning/1.html
+++ b/test/fixtures/warnings/src/warning/1.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="container">
-  <nav role="nav" class="navbar navbar-default navbar-fixed-top">
+  <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -171,6 +171,7 @@
       Last updated 9/16/2015
     </div>
   </div>
+  <section>Test me.</section>
 </div>
 
 </body>
